Change outfit for Aranea Ienith

--- a/SKSE/Plugins/SkyPatcher/npc/SLOAD/aaaSLOAD - NPCs.ini
+++ b/SKSE/Plugins/SkyPatcher/npc/SLOAD/aaaSLOAD - NPCs.ini
@@ -218,6 +218,15 @@ filterByNpcs=Skyrim.esm|0001990F:outfitDefault=Skyrim_Logical_Outfit_and_Armamen
 
 
 ;-------------------------------------;
+;             DUNMER NPCs             ;
+;-------------------------------------;
+; DA01Aranea "Aranéa Iénith" [NPC_:00028AD0]
+; REPLACE OUTFIT BY ↓
+; DLC2DarkElfTempleOutfit [OTFT:0403CEED]
+filterByNpcs=Skyrim.esm|00028AD0:outfitDefault=Dragonborn.esm|0403CEED
+
+
+;-------------------------------------;
 ;            RANDOM FIXES             ;
 ;-------------------------------------;
 ; dunBleakFallsCorpseBretonThomas "Thomas" [NPC_:000C3B25]
