--- a/SKSE/Plugins/SkyPatcher/outfit/SLOAD/aaaSLOAD - Outfit.ini
+++ b/SKSE/Plugins/SkyPatcher/outfit/SLOAD/aaaSLOAD - Outfit.ini
@@ -28,8 +28,20 @@ filterByOutfits=Skyrim.esm|000F3E8A,Skyrim.esm|000FF282,Skyrim.esm|000E77DE:clea
 
 
 ;-------------------------------------;
-;           REDORAN GUARDS            ;
+;     RAVEN ROCK - REDORAN GUARDS     ;
 ;-------------------------------------;
 ; DLC2RRRedoranGuardOutfit [OTFT:040195AE]
 ; LOutfitRedoranGuard [LVLI:FE000834]
 filterByOutfits=Dragonborn.esm|040195AE:clear=true:formsToAdd=Skyrim_Logical_Outfit_and_Armament_Diversification.esp|834
+
+
+;-------------------------------------;
+;     RAVEN ROCK - TEMPLE PRIESTS     ;
+;-------------------------------------;
+; DLC2DarkElfTempleOutfit [OTFT:0403CEED]
+; LOutfitRavenRockTemple [LVLI:FE0008A5]
+filterByOutfits=Dragonborn.esm|0403CEED:clear=true:formsToAdd=Skyrim_Logical_Outfit_and_Armament_Diversification.esp|8A5
+
+; DLC2DarkElfTempleOutfitNoHood [OTFT:0403CEEE]
+; LOutfitRavenRockTempleNoHelmet [LVLI:FE0008A7]
+filterByOutfits=Dragonborn.esm|0403CEEE:clear=true:formsToAdd=Skyrim_Logical_Outfit_and_Armament_Diversification.esp|8A7
